[package]
name = "punwrap"
version = "0.1.0"
authors = ["Viktor Eikman <viktor.eikman@gmail.com>"]
edition = "2018"
description = "Python bindings for runwrap"
readme = "README.md"
repository = "https://github.com/veikman/punwrap"
license = "GPL-3.0-or-later"
keywords = ["text", "markdown", "vcs"]
include = ["src/", "pyproject.toml", "LICENSE", "*.md"]

[lib]
name = "punwrap"
crate-type = ["cdylib"]

[dependencies]
runwrap = "0.2"

[dependencies.pyo3]
version = "0.13"
features = ["extension-module"]
