# Python-side project configuration.
# See Cargo.toml for project metadata exported in the build process.
# See tasks.py for project tasks.

[project]
name = "punwrap"
requires-python = ">=3.9"

[build-system]
requires = ["maturin>=1.1,<2"]
build-backend = "maturin"

[tool.maturin]
compatibility = "manylinux2014"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = 'single'
