# Python-side project configuration.
# See Cargo.toml for project metadata exported in the build process.
# See tasks.py for project tasks.

[project]
name = "punwrap"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[build-system]
requires = ["maturin>=1.1,<2"]
build-backend = "maturin"

[tool.maturin]
compatibility = "manylinux2014"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = 'single'
